<?xml version="1.0" encoding="utf-8"?>
<!-- The bike list layout -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View style="@style/list_item_cell_separator_layout" />

            <TextView
                android:id="@+id/list_bike_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_weight="2
"
                android:padding="2dp"
                android:text="@string/name" />

            <View style="@style/list_item_cell_separator_layout" />

            <TextView
                android:id="@+id/list_bike_loc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:textAlignment="center"
                android:padding="2dp"
                android:text="@string/location" />

            <View style="@style/list_item_cell_separator_layout" />

            <TextView
                android:id="@+id/list_bike_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="2dp"
                android:text="@string/price" />

            <View style="@style/list_item_cell_separator_layout" />

            <TextView
                android:id="@+id/list_bike_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="2dp"
                android:text="@string/status" />

            <View style="@style/list_item_cell_separator_layout" />


        </TableRow>

    </TableLayout>

    <View
        style="@style/list_item_separator_layout"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
</android.support.constraint.ConstraintLayout>